[package]
name = "pythia-scry-gui"
version = "0.1.0"
authors = ["Seth Just <sjust@seer.bio>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = [] }
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
tokio = { version = "1", features = ["time"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
