[package]
name = "pythia-scry-gui"
version = "0.1.0"
authors = ["Seth Just <sjust@seer.bio>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
dark-light = "2.0.0"
chrono = "0.4"
toml = "0.8"

# For WASM builds, we need js feature for uuid's getrandom dependency
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.0", features = ["v4", "js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "DomTokenList", "MediaQueryList", "Storage"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
once_cell = "1.19"
dirs = "5.0"
futures-lite = "2.3"
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread"] }

[features]
default = ["desktop"]
web = ["dioxus/fullstack", "dioxus/web"]
desktop = ["dioxus/desktop"]
server = ["dioxus/fullstack", "dioxus/server"]
bundle = []
